# 3CourseWork

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md
include/: buffer.h  client.h  handler.h  irc.h  listener.h  message.h  parser.h  socket.h
include/ui/: clientview.h  login.h  mainwindow.h
lib/: buffer.cpp  client.cpp  handler.cpp  parser.cpp  socket.cpp
lib/ui/: login.cpp  login_dialog.ui  mainwindow.cpp  mainwindow.ui
src/: buffer.cpp  client.cpp  client.h  handler.cpp  handler.h  irc.h  main.cpp  message.h  parser.cpp  parser.h  socket.cpp  socket.h
